[tool.poetry]
name = "find-lens"
version = "0.1.0"
description = ""
authors = ["TY <tyyyy66@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
pydantic-settings = "^2.6.0"
pypika = "^0.48.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
